--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,17 +1,26 @@
-dota_force_right_click_attack "1"
-dota_range_display "0"
+===Performance===
+==Halves the default fps==
+fps_max "60"
+==Stops screen refresh rate exceeding refresh rate of monitor==
+mat_vsync "1"
+==Enable with vsync if fps is less than 60 (0 Disables, 1 Enables)==
+mat_triplebuffered "1"
+==No flames in intro==
+dota_embers "0"
+
+===Ingame UI and visuals===
+==Show an indicator for skillshots==
 dota_disable_range_finder "0"
-dota_screen_shake "1"
-dota_player_multipler_orders "0"
-dota_unit_fly_bonus_height "150"
-dota_minimap_simple_colors "0"
-dota_minimap_misclick_time "0.2"
-dota_sf_old_heropedia "0"
+==Set net_graph to appear in left side of top bar==
 net_graphinsetbottom "437"
 net_graphinsetright "-80"
 net_graphproportionalfont "0"
 net_graph "1"
+==Set amount of HP for an HP bar on top of a hero==
 dota_health_per_vertical_marker "250"
-dota_embers "0"
-dota_minimap_ping_duration "3"
+==Bigger icons in minimap==
 dota_minimap_hero_size "900"
+
+===Gameplay & binds===
+==Force autoattack on right click, even on allies==
+dota_force_right_click_attack "1"
