added net settings and stuff

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,3 +1,8 @@
+===Resources===
+//http://www.teamliquid.net/forum/viewmessage.php?topic_id=337793
+//http://www.playdota.com/forums/showthread.php?t=672679
+//Google
+
 ===Performance===
 ==Halves the default fps==
 fps_max "60"
@@ -7,6 +12,18 @@ mat_vsync "1"
 mat_triplebuffered "1"
 ==No flames in intro==
 dota_embers "0"
+
+===Net Settings===
+==Amount of bandwidth==
+rate "80000"
+==Amount of updates recieved from server per second==
+cl_updaterate "40"
+==Amount of updates sent to server per second==
+cl_cmdrate "40"
+cl_interp "0"
+cl_interp_ratio "1"
+==When errors occur smooth display over X time==
+cl_smoothtime "0.01"
 
 ===Ingame UI and visuals===
 ==Show an indicator for skillshots==
