proper comments, no errors

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,43 +1,43 @@
-===Resources===
+////Resources
 //http://www.teamliquid.net/forum/viewmessage.php?topic_id=337793
 //http://www.playdota.com/forums/showthread.php?t=672679
 //Google
 
-===Performance===
-==Halves the default fps==
+////Performance
+//Halves the default fps
 fps_max "60"
-==Stops screen refresh rate exceeding refresh rate of monitor==
+//Stops screen refresh rate exceeding refresh rate of monitor
 mat_vsync "1"
-==Enable with vsync if fps is less than 60 (0 Disables, 1 Enables)==
+//Enable with vsync if fps is less than 60 (0 Disables, 1 Enables)
 mat_triplebuffered "1"
-==No flames in intro==
+//No flames in intro
 dota_embers "0"
 
-===Net Settings===
-==Amount of bandwidth==
+////Net Settings
+//Amount of bandwidth
 rate "80000"
-==Amount of updates recieved from server per second==
+//Amount of updates recieved from server per second
 cl_updaterate "40"
-==Amount of updates sent to server per second==
+//Amount of updates sent to server per second
 cl_cmdrate "40"
 cl_interp "0"
 cl_interp_ratio "1"
-==When errors occur smooth display over X time==
+//When errors occur smooth display over X time
 cl_smoothtime "0.01"
 
-===Ingame UI and visuals===
-==Show an indicator for skillshots==
+////Ingame UI and visuals
+//Show an indicator for skillshots
 dota_disable_range_finder "0"
-==Set net_graph to appear in left side of top bar==
+//Set net_graph to appear in left side of top bar
 net_graphinsetbottom "437"
 net_graphinsetright "-80"
 net_graphproportionalfont "0"
 net_graph "1"
-==Set amount of HP for an HP bar on top of a hero==
+//Set amount of HP for an HP bar on top of a hero
 dota_health_per_vertical_marker "250"
-==Bigger icons in minimap==
+//Bigger icons in minimap
 dota_minimap_hero_size "900"
 
-===Gameplay & binds===
-==Force autoattack on right click, even on allies==
+////Gameplay & binds
+//Force autoattack on right click, even on allies
 dota_force_right_click_attack "1"
