--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -11,7 +11,7 @@ mat_vsync "1"
 //Enable with vsync if fps is less than 60 (0 Disables, 1 Enables)
 mat_triplebuffered "1"
 //No flames in intro
-dota_embers "0"
+dota_ember "0"
 
 ////Net Settings
 //Amount of bandwidth
