added some thread commands

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,11 +1,21 @@
-////Resources
+////Resources & info
 //http://www.teamliquid.net/forum/viewmessage.php?topic_id=337793
 //http://www.playdota.com/forums/showthread.php?t=672679
+//http://www.reddit.com/r/DotA2/comments/xhvxc/rdota2_lets_talk_autoexecs/
+//http://pastebin.com/XjinQZY3
 //Google
 
 ////Performance
 //Halves the default fps
 fps_max "60"
+//Preload all information for faster game initiation
+cl_forcepreload "1"
+//Forces server-side preload
+sv_forcepreload "1"
+//-1 default, 0 synchronous single thread, 1 queued single thread,2 multithread
+mat_queue_mode "2"
+//Sound threading
+snd_mix_async "1"
 //Stops screen refresh rate exceeding refresh rate of monitor
 mat_vsync "1"
 //Enable with vsync if fps is less than 60 (0 Disables, 1 Enables)
@@ -36,8 +46,10 @@ net_graph "1"
 //Set amount of HP for an HP bar on top of a hero
 dota_health_per_vertical_marker "250"
 //Bigger icons in minimap
-dota_minimap_hero_size "900"
+dota_minimap_hero_size "850"
 
 ////Gameplay & binds
+//Force autoattack off
+dota_player_units_auto_attack "0"
 //Force autoattack on right click, even on allies
 dota_force_right_click_attack "1"
