embers fix, again!

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -21,7 +21,7 @@ mat_vsync "1"
 //Enable with vsync if fps is less than 60 (0 Disables, 1 Enables)
 mat_triplebuffered "1"
 //No flames in intro
-dota_ember "0"
+dota_embers "0"
 
 ////Net Settings
 //Amount of bandwidth
