--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -38,7 +38,7 @@ cl_smoothtime "0.01"
 ////Ingame UI and visuals
 //Show an indicator for skillshots
 dota_disable_range_finder "0"
-//Set net_graph to appear in left side of top bar
+//Set net_graph to appear in right side of top bar
 net_graphinsetbottom "437"
 net_graphinsetright "-80"
 net_graphproportionalfont "0"
@@ -46,10 +46,13 @@ net_graph "1"
 //Set amount of HP for an HP bar on top of a hero
 dota_health_per_vertical_marker "250"
 //Bigger icons in minimap
-dota_minimap_hero_size "850"
+dota_minimap_hero_size "860"
 
 ////Gameplay & binds
 //Force autoattack off
 dota_player_units_auto_attack "0"
 //Force autoattack on right click, even on allies
 dota_force_right_click_attack "1"
+
+//Just a simple echo
+echo "Custom autoexec loaded!"
