--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -26,7 +26,7 @@ dota_embers "0"
 ////Net Settings
 //Amount of bandwidth
 rate "80000"
-//Amount of updates recieved from server per second
+//Amount of updates received from server per second
 cl_updaterate "40"
 //Amount of updates sent to server per second
 cl_cmdrate "40"
