--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,7 +3,11 @@
 //http://www.playdota.com/forums/showthread.php?t=672679
 //http://www.reddit.com/r/DotA2/comments/xhvxc/rdota2_lets_talk_autoexecs/
 //http://pastebin.com/XjinQZY3
+//http://pastebin.com/kxd5aqxK
 //Google
+
+//Console
+con_enable "1"  //Console.
 
 ////Performance
 //Halves the default fps
@@ -14,6 +18,10 @@ cl_forcepreload "1"
 sv_forcepreload "1"
 //-1 default, 0 synchronous single thread, 1 queued single thread,2 multithread
 mat_queue_mode "2"
+//Threaded rendering
+r_threaded_renderables "1"
+//Particle system outside of main thread
+r_threaded_particles "1"
 //Sound threading
 snd_mix_async "1"
 //Stops screen refresh rate exceeding refresh rate of monitor
@@ -27,9 +35,9 @@ dota_embers "0"
 //Amount of bandwidth
 rate "80000"
 //Amount of updates received from server per second
-cl_updaterate "40"
+cl_updaterate "30"
 //Amount of updates sent to server per second
-cl_cmdrate "40"
+cl_cmdrate "30"
 cl_interp "0"
 cl_interp_ratio "1"
 //When errors occur smooth display over X time
@@ -53,6 +61,8 @@ dota_minimap_hero_size "860"
 dota_player_units_auto_attack "0"
 //Force autoattack on right click, even on allies
 dota_force_right_click_attack "1"
+//Do not ask for exit
+dota_quit_immediate "1"
 
 //Just a simple echo
 echo "Custom autoexec loaded!"
